--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="leftside">
                 <div class="info">
                     <div class="profession">UI/UX Desingner & Developer</div>
-                    <div class="name">I'm João Silva</div>
+                    <div class="name">I'm Saymon Rodrigues</div>
                     <div class="buttons">
                         <a href="">More About Me</a>
                         <a href="" class="light">Hire Me</a>
